# traffic_detector

./: .gitignore  check_video.py  cv_test.py  main.py  map.html  requirements.txt
cpp-motor/: CMakeLists.txt  pybind_wrapper.cpp
cpp-motor/libs/YOLOv8-TensorRT-CPP/: CMakeLists.txt
cpp-motor/libs/YOLOv8-TensorRT-CPP/libs/tensorrt-cpp-api/: CMakeLists.txt
cpp-motor/src/: VehicleCounter.cpp  VehicleCounter.h
cpp-motor/src/tracking/: CentroidTracker.h
ui/: main_window.py  metrics_tab.py  theme.qss  video_processor_worker.py
